--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,19 @@
 @import "tailwindcss";
-
-body {
-  @apply flex  inset-0 justify-center h-screen ;
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');body {
+  @apply flex  inset-0 justify-center h-screen font-sans ;
 }
+@theme {
+  --font-mono: 'Space Mono', monospace;
+}
+
 .flex-center {
   @apply flex justify-center items-center h-full;
 }
 
 .weather{
-  @apply rounded-xl text-slate-700 items-center justify-center py-7 px-15 mt-20 text-center shadow-sm;
+  @apply font-mono bg-zinc-50 rounded-xl text-black items-center justify-center py-7 px-15 mt-20 text-center shadow-md;
   .city {
-    @apply text-3xl font-bold;
+    @apply text-3xl font-semibold;
   }
   .current-weather {
     @apply  mt-5 flex justify-center items-center font-semibold text-2xl;
@@ -20,9 +23,13 @@ body {
     }
   }
   .temperature {
-    @apply text-6xl font-bold mb-5;
+    @apply text-6xl font-bold mb-5 tracking-wider;
   }
   .details {
+    @apply mt-10;
+    .parameter-row {
+      @apply flex justify-between mb-2 text-lg mt-1;
+    }
     .parameter-value {
       @apply font-semibold ;
     }
